--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Webpage</title>
 </head>
 <body>
-    <h1>MY WEBPAGE</h1>
+    <h1 style= "color:blue;">MY WEBPAGE</h1>
     This is the website
     Yes
 </body>
